
2006-08-25 Florian Boor <florian.boor@kernelconcepts.de>
        * Makefile. po/ja.po  Add Japanese translation.

2005-10-15 Florian Boor <florian.boor@kernelconcepts.de>
        * Makefile. po/vi.po po/sv.po: Add Swedish and Vietnamese
          translations.

2005-10-15 Florian Boor <florian.boor@kernelconcepts.de>

	* Makefile, po: Add Spanish and Slovenian translations.

2005-08-26 Florian Boor <florian.boor@kernelconcepts.de>

	* filechooser.c: Use different choosers depending on screen size.
	* Release Version 0.3
	* interface.c: Convert toolbar to new API.
	* Makefile: Minor updates, version to 0.3.
	* feededit.*: Show not editable feeds from configuration files, 
	              fix several bugs. Update toolbar to new API. Handle editable
				  and not editable feeds.
	* gpe-package.html: Add some more information.

2005-02-07 Florian Boor <florian.boor@kernelconcepts.de>

	* interface.c: Fixed i8n support for menus.

2005-02-04 Florian Boor <florian.boor@kernelconcepts.de>

	* interface.c: Minor fixes.

2004-11-17 Florian Boor <florian.boor@kernelconcepts.de>

	* interface.c: Removed unused header.

2004-10-20 Florian Boor <florian.boor@kernelconcepts.de>

	* Released Version 0.2

2004-10-19 Florian Boor <florian.boor@kernelconcepts.de>

	* feededit.c, interface.c: Some reformating.
	* interface.c: Comand line switch "-u" to start upgrade.
	               Remove old cruft and debug output.
	* interface.c: Changed some message types, minor format changes.
	* feededit.c: Support for writing new feed configuration.
	              Finished feed editor.
				  Fixed several bugs, changed file location.

2004-10-18 Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Some formating changes and minor fixes.
	* fileedit.[c/h]: New files implementing package feed management 
	                  (unfinished).
	* Makefile: Added new module, changes version number scheme.
	            New version is 0.2.

2004-10-01 Florian Boor <florian.boor@kernelconcepts.de>
